# ProbingSycophancy

./: .gitignore  README.md  extracting_activations.py  main.py  model_inference.py  per_head_probes.ipynb  per_head_probes.py  pyproject.toml  requirements.txt
configs/models/: tinyllama_1b.yaml
notebooks/: cache_activations_test.ipynb  train_probes.ipynb
outputs/activations/TinyLlama-1.1B-Chat-v1.0/: activations.pt
pipeline/: 1_cache_activations.py
sycophancy/: activations.py  models.py  probes.py
