[project]
name = "sycophancy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "tqdm",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sycophancy"]